--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+title: DigData Escuela Digital
+description: Reportes de calificaciones y asistencia, para escuelas públicas y privadas de República Dominicana.🇩🇴
 theme: jekyll-theme-cayman
+remote_theme: pages-themes/cayman@v0.2.0
+plugins:
+  - jekyll-remote-theme # add this line to the plugins list if you already have one
+show_downloads: false
